objects/ccrz_SubProdTerm__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Billing_Display_Name__c</fullName>
        <label>Billing Display Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency_Sequence__c</fullName>
        <label>Billing Frequency Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Product__c</fullName>
        <label>CC Product</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_SubProdTerm_Name__c</fullName>
        <label>CC SubProdTerm Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayNameR__c</fullName>
        <label>DisplayNameRT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_End__c</fullName>
        <label>Effective End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Effective_Start__c</fullName>
        <label>Effective Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailDisplayNameRT__c</fullName>
        <label>EmailDisplayNameRT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IgnoreInstallmentFrequencyFields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IgnoreInstallmentFrequencyFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstallmentCount__c</fullName>
        <label>InstallmentCount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InstallmentFrequencyUOM__c</fullName>
        <label>InstallmentFrequencyUOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallmentFrequency__c</fullName>
        <label>InstallmentFrequency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Bill_Freq__c</fullName>
        <label>OSM Bill Freq</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderDisplayNameRT__c</fullName>
        <label>OrderDisplayNameRT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderDisplayName__c</fullName>
        <label>OrderDisplayName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderFrequencyUOM__c</fullName>
        <label>OrderFrequencyUOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderFrequency__c</fullName>
        <label>OrderFrequency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Count__c</fullName>
        <label>Order Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storefront__c</fullName>
        <label>Storefront</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subs_Cost_Multiplier__c</fullName>
        <label>Subs Cost Multiplier</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subs_Year_Multiplier__c</fullName>
        <label>Subs Year Multiplier</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Length_Sequence__c</fullName>
        <label>Subscription Length Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz_Name__c</fullName>
        <label>ccrz_Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CCSubProdTerm</label>
    <listViews>
        <fullName>Sub_ProdTerm</fullName>
        <columns>NAME</columns>
        <columns>ccrz_Name__c</columns>
        <columns>CC_Product__c</columns>
        <columns>CC_SubProdTerm_Name__c</columns>
        <columns>Display_Name__c</columns>
        <columns>DisplayNameR__c</columns>
        <filterScope>Everything</filterScope>
        <label>Sub ProdTerm</label>
        <language>en_US</language>
    </listViews>
</CustomObject>